# covid-19-incidence-italy

./: LICENSE  README.md  pyproject.toml
incidence/: __init__.py
incidence/data/: Total_resident_population_on_1st_January_2020_by_sex_(b)_and_marital_status_(n)_All_provices.csv
tests/: test_incidence.py
